Added background images

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,32 +13,60 @@
 }
 
 img {
-  width: 300px;
+  width: 200px;
+  border-radius: 10px;
 }
 
 div {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
+  background-color: rgb(248, 206, 213);
+  background-color: #9a0109;
+  border-radius: 10px;
+  width: 90%;
+  padding: 20px 20px;
+}
+
+div:not(.container) {
+  background: linear-gradient(rgba(126, 0, 21, 0.8), rgba(167, 1, 29, 0.8)), url('./assets/divs-background.svg');
 }
 
 header {
   padding: 20px 0;
-  background-color: crimson;
+  background-image: url('./assets/header.svg');
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 footer {
   display: flex;
-  padding: 20px 0;
+  padding: 20px 10px;
   justify-content: center;
-  background-color: rgb(1, 1, 167);
+  background-image: url('./assets/header.svg');
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+h1,
+h2 {
+  text-decoration: underline;
+}
+
+h3 {
+  font-size: 1.5em;
+}
+
+p {
+  letter-spacing: 1.5px;
 }
 
 #nav-list {
   display: flex;
   list-style: none;
-  justify-content: center;
-  gap: 100px;
+  justify-content: space-around;
+  font-size: 1.2em;
 }
 
 .container {
@@ -51,6 +79,8 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  gap: 50px;
+  max-width: 770px;
 }
 
 .nav-items:hover {
