--- a/src/styles.css
+++ b/src/styles.css
@@ -102,3 +102,32 @@ a {
   justify-content: space-between;
   padding: 20px 20px;
 }
+
+@media only screen and (min-width: 768px) {
+  #nav-list {
+    justify-content: center;
+    gap: 100px;
+    font-size: 2em;
+  }
+
+  h1 {
+    font-size: 2em;
+  }
+
+  h2,
+  h3 {
+    font-size: 1.9em;
+  }
+
+  p {
+    font-size: 1.5em;
+  }
+
+  img {
+    width: 400px;
+  }
+
+  #main-section {
+    background-size: 100%;
+  }
+}
